frontend/test/should_fail/cast_object_types_exec.grg
using cast_model;

rule r {
	modify {
	---
		def ref unrelO:UnrelO;
		exec ({
			unrelO = (UnrelO)new O()
		});
	}
}
